Fix, added apache common string utils for validation.